--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -1076,6 +1076,20 @@
           "column": 31,
           "line": 63
         }
+      },
+      {
+        "defaultMessage": "!!!Verifying the blockchain ({verificationProgress}% complete)",
+        "description": "Message \"Verifying the blockchain (65% complete) ...\" on the loading screen.",
+        "end": {
+          "column": 3,
+          "line": 73
+        },
+        "file": "source/renderer/app/components/loading/syncing-connecting/SyncingConnectingStatus.js",
+        "id": "loading.screen.verifyingBlockchainMessage",
+        "start": {
+          "column": 23,
+          "line": 68
+        }
       }
     ],
     "path": "source/renderer/app/components/loading/syncing-connecting/SyncingConnectingStatus.json"
