--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -800,11 +800,11 @@
   "wallet.settings.recoveryPhraseInputHint": "Enter recovery phrase",
   "wallet.settings.recoveryPhraseInputNoResults": "No results",
   "wallet.settings.recoveryPhraseStep1Button": "Continue",
-  "wallet.settings.recoveryPhraseStep1Paragraph1": "To verify that you have the correct recovery phrase for this wallet, you can enter it on the following screen. This wallet uses a {wordCount}-word recovery phrase.",
+  "wallet.settings.recoveryPhraseStep1Paragraph1": "To verify that you have the correct recovery phrase for this wallet, you can enter it on the following screen. This wallet uses a {expectedWordCount}-word recovery phrase.",
   "wallet.settings.recoveryPhraseStep1Paragraph2": "Are you being watched? Please make sure that nobody can see your screen while you are entering your wallet recovery phrase.",
   "wallet.settings.recoveryPhraseStep1Title": "Wallet recovery phrase verification",
   "wallet.settings.recoveryPhraseStep2Button": "Verify",
-  "wallet.settings.recoveryPhraseStep2Description": "Please enter your {wordCount}-word wallet recovery phrase. Make sure you enter the words in the correct order.",
+  "wallet.settings.recoveryPhraseStep2Description": "Please enter your {expectedWordCount}-word wallet recovery phrase. Make sure you enter the words in the correct order.",
   "wallet.settings.recoveryPhraseStep2InvalidMnemonics": "Invalid recovery phrase",
   "wallet.settings.recoveryPhraseStep2Subtitle": "Recovery phrase",
   "wallet.settings.recoveryPhraseStep2Title": "Wallet recovery phrase verification",
