--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -283,7 +283,7 @@
   "staking.delegationCenter.bodyTitle": "ウォレット",
   "staking.delegationCenter.currentSlot": "現行スロット",
   "staking.delegationCenter.delegate": "委任する",
-  "staking.delegationCenter.description": "変更した委任設定は、現行の次のCardanoエポックが終了すると有効になります。Shelleyテストネットのエポックの継続時間は6時間です。今回の変更はすべて{timeUntilFutureEpoch}後に有効になります。",
+  "staking.delegationCenter.description": "変更した委任設定は、現行の次のCardanoエポックが終了すると有効になります。Cardanoメインネットにおける1エポックは5日です。今回の変更はすべて{timeUntilFutureEpoch}後に有効になります。",
   "staking.delegationCenter.epoch": "エポック",
   "staking.delegationCenter.headingLeft": "次のCardanoエポック開始まであと",
   "staking.delegationCenter.headingRight": "現在のCardanoエポック",
