--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -17,6 +17,7 @@
   "api.errors.invalidAddress": "Please enter a valid address.",
   "api.errors.nothingToMigrate": "Funds cannot be transferred from this wallet because it contains some unspent transaction outputs (UTXOs), with amounts of ada that are too small to be migrated.",
   "api.errors.utxoTooSmall": "Invalid transaction.",
+  "appUpdate.manualUpdateOverlay.button.label": "!!!Follow instructions and manually update",
   "automaticUpdate.accept.button.label": "Restart Daedalus and Update",
   "automaticUpdate.description1": "You are currently running Daedalus <b>{currentAppVersion}</b> and <b>{nextUpdateVersion}</b> is available.",
   "automaticUpdate.description2": "Would you like to install the update? If choose to postpone, the update will be installed automatically on the next Daedalus launch.",
@@ -336,7 +337,6 @@
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "Continue",
   "staking.delegationSetup.chooseWallet.step.dialog.description": "Choose a wallet that holds the funds you want to delegate. The selected wallet must contain a <span>minimum amount of {minDelegationFunds} ADA</span> for delegation to be an option.",
   "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFunds": "This wallet does not contain the minimum amount of {minDelegationFunds} ADA which is required for delegation to be available. Please select a wallet with <span>a minimum amount of {minDelegationFunds} ADA</span> and click continue.",
-  "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFundsHasRewards": "This wallet does not contain the minimum amount of {minDelegationFunds} ADA which is required for delegation to be available. Rewards cannot be used for this purpose. Please select a wallet with <span>a minimum amount of {minDelegationFunds} ADA</span> and click continue.",
   "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFundsRewardsOnly": "This wallet contains only rewards balances so it cannot be delegated.",
   "staking.delegationSetup.chooseWallet.step.dialog.errorRestoringWallet": "This wallet can’t be used for delegation while it’s being synced.",
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputLabel": "Wallet",
