--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -17,6 +17,7 @@
   "api.errors.invalidAddress": "有効なアドレスを入力してください。",
   "api.errors.nothingToMigrate": "このウォレットに保有されている未使用トランザクションアウトプット（UTXO）の一部に、移行するために十分なADAが入っていないため、このウォレットから資金を移すことはできません。",
   "api.errors.utxoTooSmall": "無効なトランザクションです。",
+  "appUpdate.manualUpdateOverlay.button.label": "!!!Follow instructions and manually update",
   "automaticUpdate.accept.button.label": "Daedalusを再起動して更新する",
   "automaticUpdate.description1": "現在実行中のDaedalus <b>{currentAppVersion}</b>は<b>{nextUpdateVersion}</b>に更新できます。",
   "automaticUpdate.description2": "今すぐ最新版をインストールしますか。更新を保留すると、Daedalusを次回起動する時に自動的にインストールされます。",
@@ -336,7 +337,6 @@
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "続ける",
   "staking.delegationSetup.chooseWallet.step.dialog.description": "このウォレットには委任を有効にするために必要な最低額{minDelegationFunds}ADAが入っていません。<span>{minDelegationFunds}ADA以上</span>入っているウォレットを選択して、[続ける]をクリックしてください。",
   "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFunds": "選択されたウォレットには委任を有効にするために必要な最低額{minDelegationFunds}ADAが入っていません。<span>{minDelegationFunds}ADA以上</span>入っているウォレットを選択して、[続ける]をクリックしてください。",
-  "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFundsHasRewards": "このウォレットには委任を有効にするために必要な最低額{minDelegationFunds}ADAが入っていません。Rewards cannot be used for this purpose. <span>{minDelegationFunds}ADA以上</span><span>{minDelegationFunds}ADA以上</span>入っているウォレットを選択して、[続ける]をクリックしてください。",
   "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFundsRewardsOnly": "このウォレットに含まれているのは報酬残高のみであるため、委任はできません。",
   "staking.delegationSetup.chooseWallet.step.dialog.errorRestoringWallet": "このウォレットは現在同期中のため委任に使用することができません。",
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputLabel": "ウォレット",
