[DDW-262] Tooltip promoting password managers

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -597,7 +597,6 @@
   "wallet.create.dialog.passwordFieldPlaceholder": "Password",
   "wallet.create.dialog.passwordSectionDescription": "Keep your wallet secure by setting a spending password",
   "wallet.create.dialog.passwordSectionLabel": "Spending password",
-  "wallet.create.dialog.passwordTooltip": "!!!It is really good to use Password Manager apps to improve security. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis diam non nulla sollicitudin, ac ultrices purus luctus.",
   "wallet.create.dialog.repeatPasswordLabel": "Repeat password",
   "wallet.create.dialog.spendingPasswordLabel": "Enter password",
   "wallet.create.dialog.stepsCounter": "Step {currentStep} of {totalSteps}",
@@ -606,6 +605,7 @@
   "wallet.create.dialog.title.itn": "Create a new wallet",
   "wallet.create.dialog.validateStep": "Validate",
   "wallet.create.dialog.walletNameHint": "Enter wallet name",
+  "wallet.dialog.passwordTooltip": "<b>We recommend using a password manager app</b> to manage and store your spending password. Generate a unique password using a password manager and paste it here. Passwords should never be reused.",
   "wallet.hardware.hardwareWalletBegin": "To begin, connect and unlock your <span>Hardware wallet Device</span>",
   "wallet.hardware.hardwareWalletExport": "Export <span>public key</span> on your device",
   "wallet.hardware.hardwareWalletInstructions": "Follow instructions to access your wallet",
