--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -597,7 +597,6 @@
   "wallet.create.dialog.passwordFieldPlaceholder": "パスワード",
   "wallet.create.dialog.passwordSectionDescription": "送信時パスワードを設定してウォレットを安全に保ちましょう",
   "wallet.create.dialog.passwordSectionLabel": "送金時パスワード",
-  "wallet.create.dialog.passwordTooltip": "!!!It is really good to use Password Manager apps to improve security. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis diam non nulla sollicitudin, ac ultrices purus luctus.",
   "wallet.create.dialog.repeatPasswordLabel": "パスワードを再入力してください",
   "wallet.create.dialog.spendingPasswordLabel": "パスワードを入力してください",
   "wallet.create.dialog.stepsCounter": "ステップ{currentStep}/{totalSteps}",
@@ -606,6 +605,7 @@
   "wallet.create.dialog.title.itn": "Shelleyウォレットを新規作成する",
   "wallet.create.dialog.validateStep": "!!!Validate",
   "wallet.create.dialog.walletNameHint": "ウォレット名を入力してください",
+  "wallet.dialog.passwordTooltip": "送信時パスワードの管理および保存には、<b>パスワード管理アプリの使用が推奨されます。</b>パスワード管理アプリで専用パスワードを生成し、ここに張り付けてください。パスワードは絶対に再利用しないでください。",
   "wallet.hardware.hardwareWalletBegin": "!!!To begin, connect and unlock your <span>Hardware wallet Device</span>",
   "wallet.hardware.hardwareWalletExport": "!!!Export <span>public key</span> on your device",
   "wallet.hardware.hardwareWalletInstructions": "!!!Follow instructions to access your wallet",
